[gd_scene load_steps=29 format=3 uid="uid://c18h4xswd1f27"]

[ext_resource type="Script" path="res://scenes/BattleBoard/BattleBoard.gd" id="1_27no1"]
[ext_resource type="Texture2D" uid="uid://dghdjtkwbmo24" path="res://assets/images/board - outer-edge.png" id="1_afipp"]
[ext_resource type="Script" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="3_7ephj"]
[ext_resource type="Texture2D" uid="uid://c3nk21dwls3ac" path="res://assets/images/board - 15 pt - spring.png" id="4_ual1c"]
[ext_resource type="Script" path="res://scenes/BattleBoard/SeasonalVarying.gd" id="5_y4owc"]
[ext_resource type="Texture2D" uid="uid://bqk57hk8qsifk" path="res://assets/images/board - 10 pt - spring.png" id="5_ytif3"]
[ext_resource type="Texture2D" uid="uid://chwd8gv38y3c" path="res://assets/images/board - 15 pt - summer.png" id="6_uq1fe"]
[ext_resource type="Texture2D" uid="uid://bhxv43byrnuta" path="res://assets/images/board - 15 pt - fall.png" id="7_knno5"]
[ext_resource type="PackedScene" uid="uid://bgnoso3lhho1b" path="res://scenes/BattleBoard/20_hole.tscn" id="7_os5wx"]
[ext_resource type="Script" path="res://scenes/BattleBoard/5PTRegions.gd" id="7_vwjum"]
[ext_resource type="PackedScene" uid="uid://utqtky4t3nlp" path="res://scenes/BattleBoard/radius_25px_convex_circle_collider.tscn" id="8_6fb3n"]
[ext_resource type="Texture2D" uid="uid://binekp8luqcrf" path="res://assets/images/board - 15 pt - winter.png" id="8_ljwuy"]
[ext_resource type="Script" path="res://scenes/BattleBoard/GutterArea.gd" id="9_58csh"]
[ext_resource type="Script" path="res://scenes/BattleBoard/5PTSegment.gd" id="9_ivmsf"]
[ext_resource type="Texture2D" uid="uid://btqj5kggm5gp" path="res://assets/images/board - 10 pt - summer.png" id="10_ctait"]
[ext_resource type="Script" path="res://scenes/BattleBoard/Label.gd" id="10_jfg1t"]
[ext_resource type="Script" path="res://scenes/BattleBoard/BattleStateManager.gd" id="10_mxjtq"]
[ext_resource type="Texture2D" uid="uid://cm3pq842h00ix" path="res://assets/images/Board - 5 pt quadrant - fall.png" id="11_r4d55"]
[ext_resource type="Texture2D" uid="uid://b8xu377utvonp" path="res://assets/images/board - 10 pt - fall.png" id="11_u5kei"]
[ext_resource type="Texture2D" uid="uid://cqsgjaec18csv" path="res://assets/images/Board - 5 pt quadrant - winter.png" id="12_0ueut"]
[ext_resource type="Texture2D" uid="uid://brie43j4habn0" path="res://assets/images/board - 10 pt - winter.png" id="12_jfc1t"]
[ext_resource type="Texture2D" uid="uid://dmrch74kj2hx0" path="res://assets/images/Board - 5 pt quadrant - spring.png" id="13_truek"]
[ext_resource type="Texture2D" uid="uid://20x888w8lw7y" path="res://assets/images/Board - 5 pt quadrant - summer.png" id="14_skrw2"]
[ext_resource type="Script" path="res://scenes/BattleBoard/PlaceableArea.gd" id="23_df477"]
[ext_resource type="Texture2D" uid="uid://ddgebjyrh23qh" path="res://assets/images/fly.png" id="25_60fni"]
[ext_resource type="AudioStream" uid="uid://bm3fcws84slwo" path="res://assets/music/cute_bass.mp3" id="25_f2ww7"]
[ext_resource type="Texture2D" uid="uid://bd7totvr13qu2" path="res://assets/images/heart icon.png" id="26_6i6wn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5e8yq"]
radius = 20.84

[node name="BattleBoard" type="Node2D"]
script = ExtResource("1_27no1")

[node name="SpriteEdge" type="Sprite2D" parent="."]
texture = ExtResource("1_afipp")

[node name="Area2D" type="Area2D" parent="SpriteEdge"]
collision_layer = 25
collision_mask = 25

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="SpriteEdge/Area2D"]
polygon = PackedVector2Array(3.20235e-14, -523, 51.263, -520.482, 102.032, -512.951, 151.819, -500.48, 200.143, -483.189, 246.54, -461.245, 290.563, -434.859, 331.788, -404.284, 369.817, -369.817, 404.284, -331.788, 434.859, -290.563, 461.245, -246.54, 483.189, -200.143, 500.48, -151.819, 512.951, -102.032, 520.482, -51.263, 523, 0, 520.482, 51.263, 512.951, 102.032, 500.48, 151.819, 483.189, 200.143, 461.245, 246.54, 434.859, 290.563, 404.284, 331.788, 369.817, 369.817, 331.788, 404.284, 290.563, 434.859, 246.54, 461.245, 200.143, 483.189, 151.819, 500.48, 102.032, 512.951, 51.263, 520.482, 3.20235e-14, 523, -51.263, 520.482, -102.032, 512.951, -151.819, 500.48, -200.143, 483.189, -246.54, 461.245, -290.563, 434.859, -331.788, 404.284, -369.817, 369.817, -404.284, 331.788, -434.859, 290.563, -461.245, 246.54, -483.189, 200.143, -500.48, 151.819, -512.951, 102.032, -520.482, 51.263, -523, 6.40469e-14, -520.482, -51.263, -512.951, -102.032, -500.48, -151.819, -483.189, -200.143, -461.245, -246.54, -434.859, -290.563, -404.284, -331.788, -369.817, -369.817, -331.788, -404.284, -290.563, -434.859, -246.54, -461.245, -200.143, -483.189, -151.819, -500.48, -102.032, -512.951, -51.263, -520.482, -9.60704e-14, -523, -8.68858e-14, -473, -46.3621, -470.722, -92.2777, -463.911, -137.305, -452.633, -181.009, -436.995, -222.971, -417.149, -262.785, -393.285, -300.068, -365.634, -334.461, -334.461, -365.634, -300.068, -393.285, -262.785, -417.149, -222.971, -436.995, -181.009, -452.633, -137.305, -463.911, -92.2777, -470.722, -46.3621, -473, 5.79239e-14, -470.722, 46.3621, -463.911, 92.2777, -452.633, 137.305, -436.995, 181.009, -417.149, 222.971, -393.285, 262.785, -365.634, 300.068, -334.461, 334.461, -300.068, 365.634, -262.785, 393.285, -222.971, 417.149, -181.009, 436.995, -137.305, 452.633, -92.2777, 463.911, -46.3621, 470.722, 2.89619e-14, 473, 46.3621, 470.722, 92.2777, 463.911, 137.305, 452.633, 181.009, 436.995, 222.971, 417.149, 262.785, 393.285, 300.068, 365.634, 334.461, 334.461, 365.634, 300.068, 393.285, 262.785, 417.149, 222.971, 436.995, 181.009, 452.633, 137.305, 463.911, 92.2777, 470.722, 46.3621, 473, 0, 470.722, -46.3621, 463.911, -92.2777, 452.633, -137.305, 436.995, -181.009, 417.149, -222.971, 393.285, -262.785, 365.634, -300.068, 334.461, -334.461, 300.068, -365.634, 262.785, -393.285, 222.971, -417.149, 181.009, -436.995, 137.305, -452.633, 92.2777, -463.911, 46.3621, -470.722, 2.89619e-14, -473, 0.0001, -523)
script = ExtResource("3_7ephj")
radius = 498.0
width = 50.0
quality = 64

[node name="Sprite15PT" type="Sprite2D" parent="."]
texture = ExtResource("4_ual1c")
script = ExtResource("5_y4owc")
SpringTexture = ExtResource("4_ual1c")
SummerTexture = ExtResource("6_uq1fe")
FallTexture = ExtResource("7_knno5")
WinterTexture = ExtResource("8_ljwuy")

[node name="Area2D" type="Area2D" parent="Sprite15PT"]
collision_layer = 25
collision_mask = 25

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite15PT/Area2D"]
visible = false
polygon = PackedVector2Array(58, -154.6, 58, -153.4, 78, -145.4, 78, -144.1, 97, -133.2, 97, -131.9, 127, -104.9, 127, -102.7, 146, -76.7, 146, -74.3, 160, -40.4, 160, 34.7, 149.5, 70, 148.1, 70, 126.1, 106, 124.8, 106, 104.9, 127, 102.7, 127, 83.7, 142, 81.5, 142, 68.6, 150, 65.4, 150, 40.4, 160, -35.1, 160, -58, 154.6, -58, 153.4, -78, 145.4, -78, 144.1, -97, 133.2, -97, 131.9, -127, 104.9, -127, 102.7, -150, 68.6, -150, 65.4, -160, 37, -160, -38.4, -154.5, -58, -153.4, -58, -145.4, -78, -144.1, -78, -133.2, -97, -131.9, -97, -104.9, -127, -102.7, -127, -68.6, -150, -65.4, -150, -47.4, -158, -43.1, -158, -35, -160, 35.1, -160)

[node name="Sprite10PT" type="Sprite2D" parent="."]
texture = ExtResource("5_ytif3")
script = ExtResource("5_y4owc")
SpringTexture = ExtResource("5_ytif3")
SummerTexture = ExtResource("10_ctait")
FallTexture = ExtResource("11_u5kei")
WinterTexture = ExtResource("12_jfc1t")

[node name="Area2D" type="Area2D" parent="Sprite10PT"]
collision_layer = 25
collision_mask = 25

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite10PT/Area2D"]
visible = false
polygon = PackedVector2Array(74, -316.7, 74, -315.5, 114, -304.5, 114, -303.4, 142, -292.4, 142, -291.2, 176, -273.2, 176, -272, 206, -251, 206, -249.9, 239, -219.9, 239, -217.8, 260, -194.8, 260, -192.5, 283, -159.6, 283, -157.5, 298, -129.5, 298, -126.6, 311, -94.4, 311, -90, 320, -52.5, 320, 50.5, 315.7, 78, 314.5, 78, 297.5, 131, 296.2, 131, 273.2, 176, 272, 176, 246, 212, 244.8, 212, 210.8, 247, 208.7, 247, 174.7, 274, 172.5, 274, 140.5, 293, 137.3, 293, 94.4, 311, 90.1, 311, 52.5, 320, -53.7, 320, -89, 312.6, -89, 311.4, -131, 297.4, -131, 296.2, -176, 273.2, -176, 272, -206, 251, -206, 249.9, -239, 219.9, -239, 217.7, -263, 190.8, -263, 188.6, -287, 152.6, -287, 150.5, -305, 112.4, -305, 109.3, -317, 72.3, -317, 67.4, -320, 53.5, -320, -51.5, -316.7, -74, -315.5, -74, -304.5, -114, -303.3, -114, -286.3, -154, -285.1, -154, -267.2, -185, -266, -185, -238, -221, -236.8, -221, -204.8, -252, -202.7, -252, -174.7, -274, -172.5, -274, -129.5, -298, -126.4, -298, -87.4, -313, -83.4, -313, -49.4, -320, 51.5, -320)

[node name="Sprite20PT" parent="." instance=ExtResource("7_os5wx")]

[node name="5PTRegions" type="Node2D" parent="."]
rotation = 2.35619
script = ExtResource("7_vwjum")

[node name="Sprite5PTFall" type="Sprite2D" parent="5PTRegions"]
position = Vector2(-240, -240)
texture = ExtResource("11_r4d55")
script = ExtResource("9_ivmsf")
season = 2

[node name="Area2D" type="Area2D" parent="5PTRegions/Sprite5PTFall"]
position = Vector2(238, 242)
rotation = -1.57079
collision_layer = 25
collision_mask = 25
linear_damp = 0.8
angular_damp_space_override = 3
angular_damp = 0.05

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5PTRegions/Sprite5PTFall/Area2D"]
visible = false
polygon = PackedVector2Array(1.99802, -315, 1.99701, -477, 84.997, -471.001, 162.997, -449.001, 218.997, -425.001, 290.998, -380.002, 344.998, -332.002, 399.998, -263.003, 442.999, -186.003, 471.999, -91.003, 479, -29.003, 481, 1.99698, 319, 1.998, 318, -38.002, 304.999, -97.0019, 274.999, -161.002, 235.999, -213.001, 184.998, -258.001, 130.998, -288.001, 88.9981, -304.001, 39.998, -314)

[node name="Sprite5PTWinter" type="Sprite2D" parent="5PTRegions"]
position = Vector2(240, -240)
rotation = 1.57079
texture = ExtResource("12_0ueut")
script = ExtResource("9_ivmsf")
season = 3

[node name="Area2D" type="Area2D" parent="5PTRegions/Sprite5PTWinter"]
position = Vector2(238, 242)
rotation = -1.57079
collision_layer = 25
collision_mask = 25
linear_damp_space_override = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5PTRegions/Sprite5PTWinter/Area2D"]
visible = false
polygon = PackedVector2Array(1.99802, -315, 1.99701, -477, 84.997, -471.001, 162.997, -449.001, 218.997, -425.001, 290.998, -380.002, 344.998, -332.002, 399.998, -263.003, 442.999, -186.003, 471.999, -91.003, 479, -29.003, 481, 1.99698, 319, 1.998, 318, -38.002, 304.999, -97.0019, 274.999, -161.002, 235.999, -213.001, 184.998, -258.001, 130.998, -288.001, 88.9981, -304.001, 39.998, -314)

[node name="Sprite5PTSpring" type="Sprite2D" parent="5PTRegions"]
position = Vector2(240, 240)
rotation = -3.14159
texture = ExtResource("13_truek")
script = ExtResource("9_ivmsf")

[node name="Area2D" type="Area2D" parent="5PTRegions/Sprite5PTSpring"]
position = Vector2(238, 242)
rotation = -1.57079
collision_layer = 25
collision_mask = 25
linear_damp = 0.0
angular_damp_space_override = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5PTRegions/Sprite5PTSpring/Area2D"]
visible = false
polygon = PackedVector2Array(1.99802, -315, 1.99701, -477, 84.997, -471.001, 162.997, -449.001, 218.997, -425.001, 290.998, -380.002, 344.998, -332.002, 399.998, -263.003, 442.999, -186.003, 471.999, -91.003, 479, -29.003, 481, 1.99698, 319, 1.998, 318, -38.002, 304.999, -97.0019, 274.999, -161.002, 235.999, -213.001, 184.998, -258.001, 130.998, -288.001, 88.9981, -304.001, 39.998, -314)

[node name="Sprite5PTSummer" type="Sprite2D" parent="5PTRegions"]
position = Vector2(-240, 240)
rotation = -1.5708
texture = ExtResource("14_skrw2")
script = ExtResource("9_ivmsf")
season = 1

[node name="Area2D" type="Area2D" parent="5PTRegions/Sprite5PTSummer"]
position = Vector2(238, 242)
rotation = -1.57079
collision_layer = 25
collision_mask = 25
linear_damp_space_override = 3
linear_damp = 0.8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="5PTRegions/Sprite5PTSummer/Area2D"]
visible = false
polygon = PackedVector2Array(1.99802, -315, 1.99701, -477, 84.997, -471.001, 162.997, -449.001, 218.997, -425.001, 290.998, -380.002, 344.998, -332.002, 399.998, -263.003, 442.999, -186.003, 471.999, -91.003, 479, -29.003, 481, 1.99698, 319, 1.998, 318, -38.002, 304.999, -97.0019, 274.999, -161.002, 235.999, -213.001, 184.998, -258.001, 130.998, -288.001, 88.9981, -304.001, 39.998, -314)

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(0.535, 0.535)

[node name="GutterInnerCollider" type="StaticBody2D" parent="."]
visible = false
scale = Vector2(25, 25)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GutterInnerCollider"]
visible = false
shape = SubResource("CircleShape2D_5e8yq")

[node name="GutterOuterCollider" parent="." instance=ExtResource("8_6fb3n")]
visible = false
scale = Vector2(23.42, 23.42)
collision_layer = 27
collision_mask = 27

[node name="GutterArea" type="Area2D" parent="."]
collision_layer = 25
collision_mask = 25
script = ExtResource("9_58csh")

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="GutterArea"]
visible = false
polygon = PackedVector2Array(4.6535e-14, -760, 148.269, -745.397, 290.839, -702.148, 422.233, -631.917, 537.401, -537.401, 631.917, -422.233, 702.148, -290.839, 745.397, -148.269, 760, 0, 745.397, 148.269, 702.148, 290.839, 631.917, 422.233, 537.401, 537.401, 422.233, 631.917, 290.839, 702.148, 148.269, 745.397, 4.6535e-14, 760, -148.269, 745.397, -290.839, 702.148, -422.233, 631.917, -537.401, 537.401, -631.917, 422.233, -702.148, 290.839, -745.397, 148.269, -760, 9.30701e-14, -745.397, -148.269, -702.148, -290.839, -631.917, -422.233, -537.401, -537.401, -422.233, -631.917, -290.839, -702.148, -148.269, -745.397, -1.39605e-13, -760, -1.02867e-13, -560, -109.251, -549.24, -214.303, -517.372, -311.119, -465.623, -395.98, -395.98, -465.623, -311.119, -517.372, -214.303, -549.24, -109.251, -560, 6.8578e-14, -549.24, 109.251, -517.372, 214.303, -465.623, 311.119, -395.98, 395.98, -311.119, 465.623, -214.303, 517.372, -109.251, 549.24, 3.4289e-14, 560, 109.251, 549.24, 214.303, 517.372, 311.119, 465.623, 395.98, 395.98, 465.623, 311.119, 517.372, 214.303, 549.24, 109.251, 560, 0, 549.24, -109.251, 517.372, -214.303, 465.623, -311.119, 395.98, -395.98, 311.119, -465.623, 214.303, -517.372, 109.251, -549.24, 3.4289e-14, -560, 0.0001, -760)
script = ExtResource("3_7ephj")
radius = 660.0
width = 200.0

[node name="BattleStateManager" type="Node2D" parent="."]
script = ExtResource("10_mxjtq")

[node name="PlaceableArea" type="Area2D" parent="."]
collision_layer = 25
collision_mask = 25
script = ExtResource("23_df477")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlaceableArea"]
visible = false
polygon = PackedVector2Array(-339, 339, -366, 362, -326, 399, -263, 443, -193, 477, -115, 503, -63, 512, 0, 516, 68, 511, 155, 492, 234, 459, 292, 425, 332, 395, 368, 360, 339, 339, 325, 327, 264, 381, 157, 435, 87, 454, 0, 465, -80, 458, -153, 435, -240, 393, -326, 327)

[node name="Polygon2D" type="Polygon2D" parent="PlaceableArea"]
color = Color(1, 0.31, 0.31, 0)
antialiased = true
polygon = PackedVector2Array(-339, 339, -366, 362, -326, 399, -263, 443, -193, 477, -115, 503, -63, 512, 0, 516, 68, 511, 155, 492, 234, 459, 292, 425, 332, 395, 368, 360, 339, 339, 325, 327, 264, 381, 157, 435, 87, 454, 0, 465, -80, 458, -153, 435, -240, 393, -326, 327)

[node name="DiscSelection" type="ScrollContainer" parent="."]
visible = false
clip_contents = false
custom_minimum_size = Vector2(350, 500)
offset_left = -940.0
offset_top = -80.0
offset_right = -540.0
offset_bottom = 520.0

[node name="GridContainer" type="GridContainer" parent="DiscSelection"]
custom_minimum_size = Vector2(350, 500)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -69.0
offset_top = -485.0
offset_right = 49.0
offset_bottom = -397.0
theme_override_font_sizes/font_size = 64
text = "test"
script = ExtResource("10_jfg1t")

[node name="PScore" type="Label" parent="."]
offset_left = -805.0
offset_top = -479.0
offset_right = -694.0
offset_bottom = -391.0
theme_override_colors/font_color = Color(0, 0.0823529, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "P: 0"

[node name="TextureRect" type="TextureRect" parent="PScore"]
layout_mode = 0
offset_left = -45.0
offset_top = 27.0
offset_right = -5.0
offset_bottom = 67.0
texture = ExtResource("25_60fni")

[node name="EScore" type="Label" parent="."]
offset_left = 520.0
offset_top = -482.0
offset_right = 628.0
offset_bottom = -394.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "E: 0"

[node name="TextureRect" type="TextureRect" parent="EScore"]
layout_mode = 0
offset_left = -52.0
offset_top = 27.0
offset_right = -12.0
offset_bottom = 67.0
texture = ExtResource("26_6i6wn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_f2ww7")
volume_db = -8.0
autoplay = true
bus = &"Music"

[node name="EnemyTurnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PhysicsWaitingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Sprite15PT/Area2D" to="5PTRegions/Sprite5PTWinter" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Sprite10PT/Area2D" to="5PTRegions/Sprite5PTWinter" method="_on_area_2d_body_entered"]
[connection signal="new_season_aligned" from="5PTRegions" to="Sprite15PT" method="_on_season_detector_season_changed"]
[connection signal="new_season_aligned" from="5PTRegions" to="Sprite10PT" method="_on_season_detector_season_changed"]
[connection signal="body_entered" from="5PTRegions/Sprite5PTFall/Area2D" to="5PTRegions/Sprite5PTFall" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="5PTRegions/Sprite5PTWinter/Area2D" to="5PTRegions/Sprite5PTWinter" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="5PTRegions/Sprite5PTSpring/Area2D" to="5PTRegions/Sprite5PTSpring" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="5PTRegions/Sprite5PTSummer/Area2D" to="5PTRegions/Sprite5PTSummer" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="GutterArea" to="." method="_on_gutter_area_body_entered"]
[connection signal="ready_for_enemy" from="BattleStateManager" to="BattleStateManager" method="_on_ready_for_enemy"]
[connection signal="ready_for_physics" from="BattleStateManager" to="." method="_on_battle_state_manager_ready_for_physics"]
[connection signal="ready_for_physics" from="BattleStateManager" to="BattleStateManager" method="_on_ready_for_physics"]
[connection signal="ready_to_choose" from="BattleStateManager" to="BattleStateManager" method="_on_ready_to_choose"]
[connection signal="ready_to_end" from="BattleStateManager" to="BattleStateManager" method="_on_ready_to_end"]
[connection signal="ready_to_shoot" from="BattleStateManager" to="BattleStateManager" method="_on_ready_to_shoot"]
[connection signal="input_event" from="PlaceableArea" to="." method="_on_edge_area_2d_input_event"]
[connection signal="timeout" from="EnemyTurnTimer" to="BattleStateManager" method="_on_enemy_turn_timer_timeout"]
[connection signal="timeout" from="PhysicsWaitingTimer" to="BattleStateManager" method="_on_enemy_turn_timer_timeout"]
